--- a/my-web-messenger/src/pages/Login/login.css
+++ b/my-web-messenger/src/pages/Login/login.css
@@ -12,7 +12,25 @@
 }
 
 /* элементы */
-.login-form__buttons {
+.login-form__text {
+    left: 50%;
+    top: 50%;
+    font-size: 36px;
+    text-align: center;
+    margin: 38px;
+}
+.login-form__login-title {
+    margin-left: 56px;
+    font-size: 16px;
+    color: #000;
+    
+}
+.login-form__login-line {
+    width: 285px;
+    border-top: 1px solid;
+    margin-top: 48px;
+}
+/* .login-form__buttons {
     width: 400px;
     background-color: red;
 }
@@ -23,6 +41,6 @@
 } 
  .login-form__reset {
     width: 500px;
- }
+ } */
 /* .login-form__username-input {}
 .login-form__password-input {}  */
