--- a/my-web-messenger/src/components/input/input.css
+++ b/my-web-messenger/src/components/input/input.css
@@ -8,6 +8,7 @@
     background-color: #d9d9d9;
     border-style: hidden;
     border-bottom: 1px solid;
+    padding: 20px;
     /* padding: 0px; */
     /* padding-top: 10px; */
     margin-left: 56px;
@@ -15,17 +16,24 @@
 
 .label {
     position: absolute;
-    margin-top: -30px;
+    margin-top: -1px;
     margin-left: 55px;
     /* top: 100px;
     left: 5px; */
 }
 
+/* Смещение inputa по вертикали */
+.offset-top {
+    padding-top: 70px;
+}
+
 .input:focus {
+    padding-left: 0px;
     outline: none;
 }
 
 .input::placeholder {
     position: absolute;
+    padding-top: 10px;
     left: 0px;
 }
