--- a/src/components/Input/input.css
+++ b/src/components/Input/input.css
@@ -1,24 +1,10 @@
-@charset "UTF-8";
-/*
-    $number - номер inputa (sign-in, sign-up)
-*/
-input {
-  left: 50%;
-  width: 265px;
-  background-color: #d9d9d9;
-  border-style: hidden;
+.input {
+  border: 0;
   border-bottom: 1px solid;
-  padding: 20px;
-  position: absolute;
+  width: 200px;
 }
-
-label {
-  position: absolute;
-  margin-left: 55px;
-}
-
-offset {
-  margin-top: 20px;
+.input:focus {
+  outline: none;
 }
 
 /*# sourceMappingURL=input.css.map */
