--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -2,19 +2,15 @@ $position-center: 50%;
 $back-color: #d9d9d9;
 $border-radius: 30px;
 
-form {
-    left: $position-center;
-    top: $position-center;
-    width: 400px;
-    height: 512px;
-    margin-left: -200px;
-    margin-top: -256px;
-    background-color: $back-color;
-    position: absolute;
-    border-radius: $border-radius;
+.login-container {
+    padding: 30px;
 }
 
-p {
+.login-header {
+    font-size: 20px;
     text-align: center;
-    font-size: 36px;
+}
+
+.login-form {
+    margin: 40px 0 0 0;
 }
