some fixes for Login page

--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -1,16 +1,24 @@
-$position-center: 50%;
-$back-color: #d9d9d9;
-$border-radius: 30px;
-
 .login-container {
-    padding: 30px;
-}
+    border: 1px solid black;
+    border-radius: 30px;
+    margin: 0px auto;
+    width: 400px;
+    height: 520px;
+    position: relative;
+    top: 50%;
+    transform: translateY(50%);
 
-.login-header {
-    font-size: 20px;
-    text-align: center;
-}
+    .login-header {
+        padding-top: 30px;
+        font-size: 36px;
+        text-align: center;
+    }
 
-.login-form {
-    margin: 40px 0 0 0;
+    .login-input__login {
+        margin-top: 20px;
+    }
+
+    .login-input__password {
+        margin-top: 10px;
+    }
 }
