--- a/src/components/Input/input.css
+++ b/src/components/Input/input.css
@@ -1,10 +1,17 @@
-.input {
-  border: 0;
-  border-bottom: 1px solid;
-  width: 200px;
+input {
+  width: 285px;
+  height: 40px;
+  border: 1px solid black;
+  border-radius: 10px;
+  margin-left: 50px;
 }
-.input:focus {
-  outline: none;
+
+input::placeholder {
+  padding-left: 10px;
+}
+
+input:focus {
+  padding-left: 10px;
 }
 
 /*# sourceMappingURL=input.css.map */
