--- a/src/components/Input/input.scss
+++ b/src/components/Input/input.scss
@@ -1,11 +1,17 @@
-$back-color: #d9d9d9;
+input {
+   width: 285px;
+   height: 40px;
+   border: 1px solid black;
+   border-radius: 10px;
 
-.input {
-   border: 0;
-   border-bottom: 1px solid;
-   width: 200px;
+   // margin-top: 50px;
+   margin-left: 50px;
+}
 
-   &:focus {
-    outline: none;
-   }
+input::placeholder {
+   padding-left: 10px;
+}
+
+input:focus {
+   padding-left: 10px;
 }
