--- a/src/pages/Main/main.scss
+++ b/src/pages/Main/main.scss
@@ -1,6 +1,6 @@
-$primary-color: #d9d9d9;
+// $primary-color: #d9d9d9;
 
-div {
-    background-color: $primary-color;
-    padding-left: 50px; 
-}
+// div {
+//     // background-color: $primary-color;
+//     // padding-left: 50px; 
+// }
