--- a/src/components/Input/input.css
+++ b/src/components/Input/input.css
@@ -1,17 +1,31 @@
-input {
-  width: 285px;
-  height: 40px;
-  border: 1px solid black;
-  border-radius: 10px;
+input, label {
+  display: block;
+  position: relative;
+}
+
+label {
+  top: 15px;
   margin-left: 50px;
 }
 
-input::placeholder {
+input {
+  width: 285px;
+  height: 40px;
+  border: none;
+  border-bottom: 1px solid;
+  margin-left: 50px;
+}
+input:focus {
+  outline: none;
   padding-left: 10px;
 }
 
-input:focus {
-  padding-left: 10px;
+.input-top {
+  margin-top: 20px;
+}
+
+input {
+  background-color: #d9d9d9;
 }
 
 /*# sourceMappingURL=input.css.map */
