--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -1,23 +1,29 @@
 .login-container {
-  border: 1px solid black;
   border-radius: 30px;
-  margin: 0px auto;
   width: 400px;
   height: 520px;
   position: relative;
+  display: block;
+  left: 50%;
   top: 50%;
-  transform: translateY(50%);
+  transform: translate(-50%, 50%);
 }
 .login-container .login-header {
   padding-top: 30px;
   font-size: 36px;
   text-align: center;
 }
-.login-container .login-input__login {
-  margin-top: 20px;
+.login-container .login-button {
+  margin-top: 170px;
 }
-.login-container .login-input__password {
+.login-container .login-button__under-text {
   margin-top: 10px;
+  font-size: 15px;
+  text-align: center;
+}
+
+.login-container {
+  background-color: #d9d9d9;
 }
 
 /*# sourceMappingURL=login.css.map */
