--- a/src/pages/_AuthBase/_auth_base.scss
+++ b/src/pages/_AuthBase/_auth_base.scss
@@ -1,3 +1,4 @@
+@use '../_MainBase/main_base';
 $back-color: #d9d9d9;
 
 @mixin main-container {
@@ -5,9 +6,7 @@ $back-color: #d9d9d9;
     border-radius: 30px;
     width: 400px;
     position: relative;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, 50%);
+    @include main_base.block-center-position;
 }
 
 @mixin header {
