--- a/src/pages/Register/register.scss
+++ b/src/pages/Register/register.scss
@@ -1,3 +1,4 @@
+@use '../_MainBase/main_base';
 @use '../_AuthBase/auth_base';
 
 .register-container {
@@ -19,5 +20,5 @@
 }
 
 .register-container {
-    background-color: auth_base.$back-color;
+    background-color: main_base.$back-color;
 }
