--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -1,3 +1,5 @@
+@use '../../pages/_MainBase/main_base';
+
 button {
     width: 298px;
     height: 58px;
@@ -10,7 +12,7 @@ button {
 }
 
 button {
-    background-color: #cec48d;
+    background-color: main_base.$component_color;
 }
 
 // .button-top {
