--- a/src/pages/Plug/plug.css
+++ b/src/pages/Plug/plug.css
@@ -1,4 +1,4 @@
-.chats-container {
+.plug-container {
   display: block;
   position: relative;
   width: 500px;
@@ -7,14 +7,14 @@
   top: 50%;
   transform: translate(-50%, 50%);
 }
-.chats-container .chats-header {
+.plug-container .plug-header {
   padding-top: 30px;
   font-size: 50px;
   text-align: center;
 }
-.chats-container img {
+.plug-container img {
   width: 400px;
   margin-left: 50px;
 }
 
-/*# sourceMappingURL=chats.css.map */
+/*# sourceMappingURL=plug.css.map */
