--- a/src/pages/_MainBase/_main_base.scss
+++ b/src/pages/_MainBase/_main_base.scss
@@ -1,3 +1,7 @@
+$back-color: #d9d9d9;
+$component_color: #cec48d;
+$border_radius: 30px;
+
 @mixin block-center-position {
     left: 50%;
     top: 50%;
