--- a/src/pages/Profile/profile.css
+++ b/src/pages/Profile/profile.css
@@ -6,12 +6,45 @@
   background-color: #d9d9d9;
   margin: 0 auto;
   margin-top: 100px;
+  position: relative;
+  text-align: center;
 }
 .profile-container .avatar {
-  width: 50px;
-  height: 50px;
+  margin-top: 50px;
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
   background-color: #cec48d;
+  z-index: 1;
+}
+.profile-container .camera {
+  top: 10px;
+  left: 10px;
+  margin-left: -50px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 1px solid;
+  position: relative;
+  z-index: 2;
+}
+.profile-container .display-name {
+  margin-top: 10px;
+  font-weight: bold;
+  font-size: 24px;
+}
+.profile-container .status {
+  margin-top: -20px;
+  font-size: 20px;
+}
+.profile-container .change-line {
+  text-align: left;
+  margin-left: 70px;
+  font-size: 20px;
+  color: #242cdd;
+}
+.profile-container .logout {
+  color: red;
 }
 
 /*# sourceMappingURL=profile.css.map */
