--- a/src/pages/Profile/profile.scss
+++ b/src/pages/Profile/profile.scss
@@ -1,9 +1,44 @@
 @use '../_ProfileBase/profile_base';
+@use '../_MainBase/main_base';
 
 .profile-container {
     @include profile_base.profile-container;
 
     .avatar {
         @include profile_base.avatar;
+    }
+
+    .camera {
+        top: 10px;
+        left: 10px;
+        margin-left: -50px;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        border: 1px solid;
+        position: relative;
+        z-index: 2;
+    }
+
+    .display-name {
+        margin-top: 10px;
+        font-weight: bold;
+        font-size: 24px;
+    }
+
+    .status {
+        margin-top: -20px;
+        font-size: 20px;
+    }
+
+    .change-line {
+        text-align: left;
+        margin-left: 70px;
+        font-size: 20px;
+        color: #242cdd;
+    }
+
+    .logout {
+        color: red;
     }
 }
