--- a/src/pages/_ProfileBase/_profile_base.scss
+++ b/src/pages/_ProfileBase/_profile_base.scss
@@ -8,13 +8,17 @@
     background-color: main_base.$back_color;
     margin: 0 auto;
     margin-top: 100px;
+    position: relative;
+    text-align: center;
 }
 
 @mixin avatar {
     // padding-top: 30px;
     // vertical-align: middle;
-    width: 50px;
-    height: 50px;
+    margin-top: 50px;
+    width: 150px;
+    height: 150px;
     border-radius: 50%; 
     background-color: main_base.$component_color;
+    z-index: 1;
 }
