--- a/src/pages/Plug/plug.css
+++ b/src/pages/Plug/plug.css
@@ -9,12 +9,20 @@
 }
 .plug-container .plug-header {
   padding-top: 30px;
+  margin-left: 20px;
   font-size: 50px;
   text-align: center;
 }
 .plug-container img {
   width: 400px;
   margin-left: 50px;
+}
+.plug-container .link {
+  display: block;
+  font-size: 20px;
+  text-align: center;
+  text-decoration: none;
+  color: black;
 }
 
 /*# sourceMappingURL=plug.css.map */
