--- a/src/pages/Profile/profile.scss
+++ b/src/pages/Profile/profile.scss
@@ -31,10 +31,13 @@
         font-size: 20px;
     }
 
-    .change-line {
-        text-align: left;
+    .change-data {
+        display: block;
+        margin-top: 20px;
         margin-left: 70px;
         font-size: 20px;
+        text-decoration: none;
+        text-align: left;
         color: #242cdd;
     }
 
