--- a/src/pages/_AuthBase/_auth_base.scss
+++ b/src/pages/_AuthBase/_auth_base.scss
@@ -15,7 +15,10 @@
 }
 
 @mixin under-text {
+    display: block;
     margin-top: 10px;
     font-size: 15px;
     text-align: center;
+    text-decoration: none;
+    color: black;
 }
