--- a/src/components/ProfileField/profile_field.css
+++ b/src/components/ProfileField/profile_field.css
@@ -6,11 +6,10 @@
   text-align: left;
 }
 
-.profile-value {
+input {
   margin-top: -20px;
   font-weight: normal;
   text-align: right;
-  margin-right: 60px;
   font-size: 20px;
 }
 
