--- a/src/pages/_AuthBase/_auth_base.scss
+++ b/src/pages/_AuthBase/_auth_base.scss
@@ -1,9 +1,14 @@
 @use '../_MainBase/main_base';
 
 @mixin main-container {
-    display: block;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // margin-top: 252px;
+    // margin-left: 519px;
     border-radius: main_base.$border_radius;
-    width: 400px;
+    width: 401px;
+    height: 519px;
     position: relative;
     @include main_base.block-center-position;
 }
