--- a/src/pages/_MainBase/_main_base.scss
+++ b/src/pages/_MainBase/_main_base.scss
@@ -3,7 +3,13 @@ $component_color: #cec48d;
 $border_radius: 30px;
 
 @mixin block-center-position {
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, 50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // width: 1440px;
+    // height: 1024px;
+    flex-shrink: 0;
+    // left: 50%;
+    // top: 50%;
+    // transform: translate(-50%, 50%);
 }
