del excess code from project and some fixes

--- a/src/components/Input/input.css
+++ b/src/components/Input/input.css
@@ -9,6 +9,7 @@ label {
 }
 
 input {
+  width: 100%;
   width: 285px;
   height: 30px;
   border: none;
@@ -17,7 +18,11 @@ input {
 }
 input:focus {
   outline: none;
-  padding-left: 10px;
+  text-align: left;
+}
+input::placeholder {
+  text-align: left;
+  font-size: 15px;
 }
 
 .input-top {
