--- a/src/components/ProfileField/profileField.scss
+++ b/src/components/ProfileField/profileField.scss
@@ -1,19 +1,20 @@
 $font-size: 20px;
 
-.profile-change-passwd-field {
-    margin-top: 30px;
+.profile-field {
+    margin-top: 0px;
     font-weight: bold;
     font-size: $font-size;
     text-align: right;
 
     input {
+        margin-top: 5px;
         position: relative;
         left: 350px;
         border: none;
     }
 
     label {
-        top: 25px;
+        top: 35px;
         margin-left: 70px;
         text-align: left;
     }
