--- a/src/pages/Plug/plug.css
+++ b/src/pages/Plug/plug.css
@@ -3,9 +3,11 @@
   position: relative;
   width: 500px;
   height: 500px;
-  left: 50%;
+  position: absolute;
   top: 50%;
-  transform: translate(-50%, 50%);
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
 }
 .plug-container .plug-header {
   padding-top: 30px;
