--- a/src/pages/Register/register.css
+++ b/src/pages/Register/register.css
@@ -1,12 +1,13 @@
 .register-container {
-  display: block;
   border-radius: 30px;
-  width: 400px;
+  width: 401px;
+  height: 519px;
   position: relative;
-  left: 50%;
+  position: absolute;
   top: 50%;
-  transform: translate(-50%, 50%);
-  margin-top: -200px;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
   height: 732px;
 }
 .register-container .register-header {
