--- a/src/pages/Register/register.scss
+++ b/src/pages/Register/register.scss
@@ -3,7 +3,7 @@
 
 .register-container {
     @include auth_base.main-container;
-    margin-top: -200px;
+    // margin-top: -200px;
     height: 732px;
 
     .register-header {
