--- a/src/pages/_MainBase/_main_base.scss
+++ b/src/pages/_MainBase/_main_base.scss
@@ -3,13 +3,9 @@ $component_color: #cec48d;
 $border_radius: 30px;
 
 @mixin block-center-position {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    // width: 1440px;
-    // height: 1024px;
-    flex-shrink: 0;
-    // left: 50%;
-    // top: 50%;
-    // transform: translate(-50%, 50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 }
