--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -1,4 +1,4 @@
-button {
+.main-button {
   width: 298px;
   height: 58px;
   border: none;
@@ -7,9 +7,6 @@ button {
   text-align: center;
   margin: 0 auto;
   display: block;
-}
-
-button {
   background-color: #cec48d;
 }
 
