--- a/src/pages/Profile/profile.css
+++ b/src/pages/Profile/profile.css
@@ -18,7 +18,7 @@
   background-color: #cec48d;
   z-index: 1;
 }
-.profile-container .camera {
+.profile-container .camera-button {
   top: 10px;
   left: 10px;
   margin-left: -50px;
@@ -26,8 +26,12 @@
   height: 40px;
   border-radius: 50%;
   border: 1px solid;
-  position: relative;
+  cursor: pointer;
   z-index: 2;
+}
+.profile-container .camera-button img {
+  width: 25px;
+  margin-top: 2px;
 }
 .profile-container .display-name {
   margin-top: 10px;
