--- a/src/pages/Profile/profile.scss
+++ b/src/pages/Profile/profile.scss
@@ -8,7 +8,7 @@
         @include profile_base.avatar;
     }
 
-    .camera {
+    .camera-button {
         top: 10px;
         left: 10px;
         margin-left: -50px;
@@ -16,8 +16,13 @@
         height: 40px;
         border-radius: 50%;
         border: 1px solid;
-        position: relative;
+        cursor: pointer;
         z-index: 2;
+
+        & img {
+            width: 25px;
+            margin-top: 2px;
+        }
     }
 
     .display-name {
