--- a/src/components/AvatarLoader/avatarLoader.css
+++ b/src/components/AvatarLoader/avatarLoader.css
@@ -11,5 +11,23 @@
   background: #fff;
   z-index: 4;
 }
+.avatar-loader .dash-border {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  width: 350px;
+  height: 267px;
+  border: 3px dashed rgba(0, 0, 0, 0.67);
+  background: #fff;
+  border-radius: 20px;
+}
+.avatar-loader .text-class {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 20px;
+  color: rgba(0, 0, 0, 0.39);
+}
 
 /*# sourceMappingURL=avatarLoader.css.map */
