--- a/src/components/AvatarLoader/avatarLoader.scss
+++ b/src/components/AvatarLoader/avatarLoader.scss
@@ -10,4 +10,20 @@
     border-radius: 20px;
     background: #fff;
     z-index: 4;
+
+    .dash-border {
+        @include main_base.block-center-position;
+        width: 350px;
+        height: 267px;
+        border: 3px dashed rgba(0, 0, 0, 0.67);
+        background: #fff;
+        border-radius: 20px;
+    }
+
+    .text-class {
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 20px;
+        color: rgba(0, 0, 0, 0.39);
+    }
 }
