--- a/src/pages/Register/register.scss
+++ b/src/pages/Register/register.scss
@@ -10,7 +10,7 @@
     }
 
     .register-button {
-        margin-top: 50px;
+        padding-top: 25px;
     }
 
     .register-button__under-text {
