--- a/src/components/AvatarLoader/avatarLoader.css
+++ b/src/components/AvatarLoader/avatarLoader.css
@@ -24,10 +24,19 @@
   border-radius: 20px;
 }
 .avatar-loader .text-class {
+  margin-top: 50px;
   font-size: 24px;
   font-weight: 700;
   line-height: 20px;
   color: rgba(0, 0, 0, 0.39);
+}
+.avatar-loader .text-or-class {
+  margin-top: 110px;
+}
+.avatar-loader .avatar-button {
+  top: 50%;
+  left: 50%;
+  margin: 0 auto;
 }
 
 /*# sourceMappingURL=avatarLoader.css.map */
