--- a/src/components/AvatarLoader/avatarLoader.scss
+++ b/src/components/AvatarLoader/avatarLoader.scss
@@ -21,9 +21,20 @@
     }
 
     .text-class {
+        margin-top: 50px;
         font-size: 24px;
         font-weight: 700;
         line-height: 20px;
         color: rgba(0, 0, 0, 0.39);
+    }
+
+    .text-or-class {
+        margin-top: 110px;
+    }
+
+    .avatar-button {
+        top: 50%;
+        left: 50%;
+        margin: 0 auto;
     }
 }
