--- a/src/components/AvatarLoader/avatarLoader.scss
+++ b/src/components/AvatarLoader/avatarLoader.scss
@@ -21,6 +21,7 @@
     }
 
     .text-class {
+        display: block;
         margin-top: 50px;
         font-size: 24px;
         font-weight: 700;
@@ -29,12 +30,13 @@
     }
 
     .text-or-class {
-        margin-top: 110px;
+        display: block;
+        margin-top: 40px;
     }
 
-    .avatar-button {
-        top: 50%;
-        left: 50%;
-        margin: 0 auto;
+    button {
+        display: block;
+        margin-top: 40px;
     }
+    
 }
