fix NotFound to PageError for 404 and 500

--- a/src/pages/PageError/pageError.css
+++ b/src/pages/PageError/pageError.css
@@ -1,4 +1,4 @@
-.not-found {
+.page-error {
   color: #1e1e1e;
   font-family: Inter;
   font-style: normal;
@@ -10,14 +10,14 @@
   transform: translate(-50%, -50%);
   padding-bottom: 60px;
 }
-.not-found .code-error {
+.page-error .code-error {
   display: block;
   margin: 0 auto;
   width: 80px;
   font-size: 40px;
   line-height: 40px;
 }
-.not-found .code-error-text {
+.page-error .code-error-text {
   display: block;
   padding-bottom: 80px;
   margin: 0 auto;
@@ -26,7 +26,7 @@
   font-size: 20px;
   line-height: 20px;
 }
-.not-found .link-to-chats {
+.page-error .link-to-chats {
   display: block;
   padding-left: 50px;
   color: #3369F3;
@@ -35,4 +35,4 @@
   text-decoration: none;
 }
 
-/*# sourceMappingURL=notFound.css.map */
+/*# sourceMappingURL=pageError.css.map */
