--- a/src/components/AvatarLoader/avatarLoader.scss
+++ b/src/components/AvatarLoader/avatarLoader.scss
@@ -1,4 +1,5 @@
 @use '../../pages/_MainBase/main_base';
+@use './colors/colors';
 
 
 .avatar-loader {
@@ -8,15 +9,14 @@
     width: 423px;
     height: 348px;
     border-radius: 20px;
-    background: #fff;
+    background: colors.$avatar-loader-back;
     z-index: 4;
 
     .dash-border {
         @include main_base.block-center-position;
         width: 350px;
         height: 267px;
-        border: 3px dashed rgba(0, 0, 0, 0.67);
-        background: #fff;
+        border: 3px dashed colors.$dash-border;
         border-radius: 20px;
     }
 
@@ -26,7 +26,7 @@
         font-size: 24px;
         font-weight: 700;
         line-height: 20px;
-        color: rgba(0, 0, 0, 0.39);
+        color: colors.$text-class;
     }
 
     .text-or-class {
