--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -1,4 +1,5 @@
 @use '../../pages/_MainBase/main_base';
+@use './colors/colors';
 
 .main-button {
     width: 298px;
@@ -9,5 +10,5 @@
     text-align: center;
     margin: 0 auto;
     display: block;
-    background-color: main_base.$component_color;
+    background-color: colors.$button-color;
 }
