--- a/src/pages/Plug/plug.scss
+++ b/src/pages/Plug/plug.scss
@@ -1,4 +1,5 @@
 @use '../_MainBase/main_base';
+@use './colors/colors';
 
 .plug-container {
     display: block;
@@ -24,7 +25,7 @@
         font-size: 20px;
         text-align: center;
         text-decoration: none;
-        color: black;
+        color: colors.$link-color;
     }
 
 }
