--- a/src/components/ProfileField/profileField.css
+++ b/src/components/ProfileField/profileField.css
@@ -1,16 +1,11 @@
-.profile-field {
-  margin-top: 0px;
-  font-weight: bold;
-  font-size: 20px;
-  text-align: right;
-}
-.profile-field input {
+input {
   margin-top: 5px;
   position: relative;
   left: 350px;
   border: none;
 }
-.profile-field label {
+
+label {
   top: 35px;
   margin-left: 70px;
   text-align: left;
