fix pages with <form> tag

--- a/src/pages/Register/register.scss
+++ b/src/pages/Register/register.scss
@@ -10,7 +10,8 @@
     }
 
     .register-button {
-        padding-top: 25px;
+        margin-top: 50px;
+        // padding-top: 0px;
     }
 
     .register-button__under-text {
