--- a/src/components/Input/input.css
+++ b/src/components/Input/input.css
@@ -5,7 +5,7 @@ input, label {
 
 label {
   top: 15px;
-  margin-left: 50px;
+  margin-left: 60px;
 }
 
 input {
@@ -14,7 +14,7 @@ input {
   height: 30px;
   border: none;
   border-bottom: 1px solid;
-  margin-left: 50px;
+  left: 60px;
 }
 input:focus {
   outline: none;
@@ -26,7 +26,7 @@ input::placeholder {
 }
 
 .input-top {
-  margin-top: 20px;
+  margin-top: 15px;
 }
 
 input {
