--- a/src/components/Input/input.scss
+++ b/src/components/Input/input.scss
@@ -7,7 +7,7 @@ input, label {
 
 label {
    top: 15px;
-   margin-left: 50px;
+   margin-left: 60px;
 }
 
 input {
@@ -16,7 +16,9 @@ input {
    height: 30px;
    border: none;
    border-bottom: 1px solid;
-   margin-left: 50px;
+   left: 60px;
+   // margin-left: -290px;
+   // top: 20px;
 
    &:focus {
       outline: none;
@@ -31,7 +33,8 @@ input {
 }
 
 .input-top {
-   margin-top: 20px;
+   margin-top: 15px;
+   // border-bottom: 1px solid;
 }
 
 input {
