--- a/src/components/ProfileField/profileField.css
+++ b/src/components/ProfileField/profileField.css
@@ -1,13 +1,14 @@
-input {
+.profile-input {
   margin-top: 5px;
   position: relative;
-  left: 350px;
+  top: 4px;
+  left: 400px;
   border: none;
 }
 
-label {
+.profile-label {
   top: 35px;
-  margin-left: 70px;
+  margin-left: 60px;
   text-align: left;
 }
 
