--- a/src/components/Chat/chat.css
+++ b/src/components/Chat/chat.css
@@ -2,8 +2,42 @@
   display: block;
   height: 100px;
   width: 535px;
-  border-top: 1px solid;
-  border-bottom: 1px solid;
+  border: 0.5px solid gray;
+  background-color: #d9d9d9;
+  text-align: left;
+}
+.chat:hover {
+  background-color: black;
+  opacity: 0.39;
+}
+.chat .avatar {
+  margin-top: -25px;
+  margin-left: 0px;
+  width: 70px;
+  height: 70px;
+  border-radius: 50px;
+  background-color: #948431;
+}
+.chat .chat-name {
+  margin-top: -70px;
+  margin-left: 100px;
+  font-size: 24px;
+  font-weight: bold;
+  color: black;
+}
+.chat .chat-last-content {
+  margin-top: -20px;
+  margin-left: 100px;
+  font-size: 20px;
+  color: black;
+}
+.chat .time {
+  margin-top: -70px;
+  margin-left: 470px;
+  font-size: 16px;
+  font-weight: bold;
+  color: black;
+  opacity: 0.39;
 }
 
 /*# sourceMappingURL=chat.css.map */
