--- a/src/components/Chat/chat.scss
+++ b/src/components/Chat/chat.scss
@@ -1,7 +1,48 @@
+@use './colors/colors';
+
 .chat {
     display: block;
     height: 100px;
     width: 535px;
-    border-top: 1px solid;
-    border-bottom: 1px solid;
+    border: 0.5px solid colors.$border-color;
+    background-color: colors.$back-color;
+    text-align: left;
+
+    &:hover {
+        background-color: colors.$chat-hover-color;
+        opacity: .39;
+    }
+
+    .avatar {
+        margin-top: -25px;
+        margin-left: 0px;
+        width: 70px;
+        height: 70px;
+        border-radius: 50px;
+        background-color: colors.$avatar-color;
+    }
+
+    .chat-name {
+        margin-top: -70px;
+        margin-left: 100px;
+        font-size: 24px;
+        font-weight: bold;
+        color: colors.$chat-hover-color;
+    }
+
+    .chat-last-content {
+        margin-top: -20px;
+        margin-left: 100px;
+        font-size: 20px;
+        color: colors.$chat-hover-color;
+    }
+
+    .time {
+        margin-top: -70px;
+        margin-left: 470px;
+        font-size: 16px;
+        font-weight: bold;
+        color: colors.$chat-hover-color;
+        opacity: .39;
+    }
 }
