--- a/src/pages/SelectChat/selectChat.css
+++ b/src/pages/SelectChat/selectChat.css
@@ -1,10 +1,14 @@
 .select-default-msg {
-  display: block;
   margin-top: -498px;
   margin-left: 733px;
   font-weight: bold;
   color: #d9d9d9;
   font-size: 29px;
+}
+
+.chat-list {
+  margin-top: -440px;
+  margin-left: -40px;
 }
 
 /*# sourceMappingURL=selectChat.css.map */
