completed array of chats - 1st stage

--- a/src/pages/Chats/chats.css
+++ b/src/pages/Chats/chats.css
@@ -2,7 +2,7 @@
   margin-top: -498px;
   margin-left: 733px;
   font-weight: bold;
-  color: #d9d9d9;
+  color: gray;
   font-size: 29px;
 }
 
@@ -11,4 +11,4 @@
   margin-left: -40px;
 }
 
-/*# sourceMappingURL=selectChat.css.map */
+/*# sourceMappingURL=chats.css.map */
