--- a/src/components/ChatButton/chatButton.css
+++ b/src/components/ChatButton/chatButton.css
@@ -1,4 +1,4 @@
-.chat {
+.chat-button {
   display: block;
   height: 100px;
   width: 535px;
@@ -6,11 +6,11 @@
   background-color: #d9d9d9;
   text-align: left;
 }
-.chat:hover {
+.chat-button:hover {
   background-color: black;
   opacity: 0.39;
 }
-.chat .avatar {
+.chat-button .avatar {
   margin-top: -25px;
   margin-left: 0px;
   width: 70px;
@@ -18,20 +18,20 @@
   border-radius: 50px;
   background-color: #948431;
 }
-.chat .chat-name {
+.chat-button .chat-name {
   margin-top: -70px;
   margin-left: 100px;
   font-size: 24px;
   font-weight: bold;
   color: black;
 }
-.chat .chat-last-content {
+.chat-button .chat-last-content {
   margin-top: -20px;
   margin-left: 100px;
   font-size: 20px;
   color: black;
 }
-.chat .time {
+.chat-button .time {
   margin-top: -70px;
   margin-left: 470px;
   font-size: 16px;
@@ -40,4 +40,4 @@
   opacity: 0.39;
 }
 
-/*# sourceMappingURL=chat.css.map */
+/*# sourceMappingURL=chatButton.css.map */
