--- a/src/pages/Chats/chats.scss
+++ b/src/pages/Chats/chats.scss
@@ -1,10 +1,10 @@
-@use '../../components/SearchChat/colors/colors';
+@use '../../components/ChatButton/colors/colors';
 
 .select-default-msg {
     margin-top: -498px;
     margin-left: 733px;
     font-weight: bold;
-    color: colors.$back-color;
+    color: colors.$border-color;
     font-size: 29px;
 }
 
