--- a/src/components/SelectionChat/selectionChat.scss
+++ b/src/components/SelectionChat/selectionChat.scss
@@ -1,8 +1,52 @@
 @use './colors/colors';
 
 .selection-chat {
-    height: 148px;
+    position: absolute;
+    top: 0%;
+    height: 140px;
     width: 905px;
     margin-left: 535px;
+    border: 1px solid colors.$border-color;
     background-color: colors.$back-color;
+
+    .selection-chat-name {
+        margin-top: 52px;
+        margin-left: 30px;
+        font-size: 24px;
+        color: colors.$font-color;
+        font-weight: bold;
+    }
+
+    .selection-chat-time {
+        margin-top: -15px;
+        margin-left: 30px;
+        font-size: 20px;
+    }
+
+    .dot-options-button {
+        position: absolute;
+        top: 60px;
+        margin-left: 860px;
+        background-color: colors.$back-color;
+        border: none;
+
+        .dot-options {
+            width: 6px;
+            height: 6px;
+            background: colors.$font-color;
+            border-radius: 5px;
+        }
+
+        .dot-options-height {
+            margin-top: 3px;
+        }
+    }
+
+    .img-search {
+        position: absolute;
+        top: 60px;
+        margin-left: 800px;
+        width: 30px;
+        height: 30px;
+    }
 }
