--- a/src/components/SearchChat/searchChat.css
+++ b/src/components/SearchChat/searchChat.css
@@ -1,27 +1,33 @@
 .search-chat {
-  display: block;
   height: 1024px;
   width: 535px;
   background-color: #d9d9d9;
 }
 .search-chat .search-bar {
-  display: block;
-  background-color: #fff;
-  top: 67px;
+  top: 60px;
   left: 103px;
   height: 64px;
-  width: 416px;
+  width: 366px;
   border-radius: 20px;
+  padding-left: 50px;
   border-style: none;
+  background-color: #fff;
+  font-size: 24px;
 }
 .search-chat .search-bar::placeholder {
   font-size: 24px;
-  padding-left: 50px;
+}
+.search-chat .search-img {
+  position: relative;
+  margin-top: 10px;
+  padding-left: 115px;
+  height: 29px;
+  width: 29px;
 }
 .search-chat .profile-button {
-  display: block;
-  margin-top: 20px;
-  margin-left: 30px;
+  position: relative;
+  margin-top: 10px;
+  margin-left: -108px;
   width: 41px;
 }
 
