--- a/src/pages/Chats/chats.css
+++ b/src/pages/Chats/chats.css
@@ -4,11 +4,12 @@
   left: 0%;
 }
 .form-chats .select-default-msg {
+  display: block;
   position: absolute;
   top: 489px;
   width: 580px;
   text-align: center;
-  margin-left: 733px;
+  margin-left: 940px;
   font-weight: bold;
   color: gray;
   font-size: 29px;
