--- a/src/components/ChatButton/chatButton.css
+++ b/src/components/ChatButton/chatButton.css
@@ -39,5 +39,13 @@
   color: black;
   opacity: 0.39;
 }
+.chat-button .unread-msgs-number {
+  display: none;
+  margin-left: 400px;
+  height: 41px;
+  width: 41px;
+  border-radius: 41px;
+  background-color: #948431;
+}
 
 /*# sourceMappingURL=chatButton.css.map */
