--- a/src/views/components/input/input.scss
+++ b/src/views/components/input/input.scss
@@ -1,38 +1,28 @@
 @use './colors/input_colors';
 
-input, label {
-    display: block;
-    position: relative;
-}
-
-label {
-    top: 15px;
-    margin-left: 60px;
-}
-
-input {
-    width: 100%;
-    width: 285px;
-    height: 30px;
-    border: none;
-    border-bottom: 1px solid;
-    left: 60px;
-
-    &:focus {
-        outline: none;
-        text-align: left;
-    }
-
-    &::placeholder {
-        text-align: left;
-        font-size: 15px;
-    }
-}
-
 .input-top {
     margin-top: 15px;
 }
 
 input {
-    background-color: input_colors.$input-back-color;
+   display: block;
+//    position: relative;
+   width: 100%;
+   width: 285px;
+   height: 30px;
+   border: none;
+   border-bottom: 1px solid;
+   left: 60px;
+
+   &:focus {
+      outline: none;
+      text-align: left;
+   }
+
+   &::placeholder {
+      text-align: left;
+      font-size: 15px;
+   }
+
+   background-color: colors.$input-back-color;
 }
