completed login page on ts

--- a/src/views/components/input/input.css
+++ b/src/views/components/input/input.css
@@ -1,17 +1,26 @@
-/* Error: There is no module with the namespace "colors".
- *    ,
- * 27 |    background-color: colors.$input-back-color;
- *    |                      ^^^^^^^^^^^^^^^^^^^^^^^^
- *    '
- *   src/views/components/input/input.scss 27:22  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: 'Error: There is no module with the namespace "colors".\a    \2577 \a 27 \2502     background-color: colors.$input-back-color;\a    \2502                       ^^^^^^^^^^^^^^^^^^^^^^^^\a    \2575 \a   src/views/components/input/input.scss 27:22  root stylesheet';
+.input-top {
+  margin-top: 15px;
 }
+
+input {
+  display: block;
+  position: relative;
+  width: 100%;
+  width: 285px;
+  height: 50px;
+  border: none;
+  border-bottom: 1px solid;
+  left: 60px;
+  top: 30px;
+  background-color: #d9d9d9;
+}
+input:focus {
+  outline: none;
+  text-align: left;
+}
+input::placeholder {
+  text-align: left;
+  font-size: 15px;
+}
+
+/*# sourceMappingURL=input.css.map */
