--- a/src/views/base_styles/main/_main.scss
+++ b/src/views/base_styles/main/_main.scss
@@ -1,9 +1,8 @@
 $border_radius: 30px;
 
 @mixin block-center-position {
-    position: absolute;
-    top: 50%;
+    position: relative;
+    // top: 50%;
     left: 50%;
-    margin-right: -50%;
     transform: translate(-50%, 50%);
 }
