--- a/src/views/components/button/button.css
+++ b/src/views/components/button/button.css
@@ -1,12 +1,12 @@
-.main-button {
+button {
+  display: block;
+  position: absolute;
   width: 298px;
   height: 58px;
   border: none;
   border-radius: 30px;
   font-size: 20px;
   text-align: center;
-  margin: 0 auto;
-  display: block;
   background-color: #cec48d;
 }
 
