--- a/src/views/components/input/input.scss
+++ b/src/views/components/input/input.scss
@@ -6,13 +6,14 @@
 
 input {
    display: block;
-//    position: relative;
+   position: relative;
    width: 100%;
    width: 285px;
-   height: 30px;
+   height: 50px;
    border: none;
    border-bottom: 1px solid;
    left: 60px;
+   top: 30px;
 
    &:focus {
       outline: none;
@@ -24,5 +25,5 @@ input {
       font-size: 15px;
    }
 
-   background-color: colors.$input-back-color;
+   background-color: input_colors.$input-back-color;
 }
