--- a/src/views/components/label/label.css
+++ b/src/views/components/label/label.css
@@ -1,8 +1,14 @@
 label {
   display: block;
   position: relative;
-  top: 15px;
-  margin-left: 60px;
+  top: 20px;
+  margin-left: 30px;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.59);
+  z-index: 2;
 }
 
 /*# sourceMappingURL=label.css.map */
