--- a/src/views/pages/login/login.css
+++ b/src/views/pages/login/login.css
@@ -3,29 +3,28 @@
   width: 401px;
   height: 519px;
   position: relative;
-  position: absolute;
-  top: 50%;
   left: 50%;
-  margin-right: -50%;
   transform: translate(-50%, 50%);
-  height: 520px;
   background-color: #d9d9d9;
 }
 .login-container .login-header {
-  padding-top: 30px;
+  padding-top: 35px;
   font-size: 36px;
   text-align: center;
 }
-.login-container .login-button {
-  margin-top: 170px;
-}
 .login-container .login-button__under-text {
   display: block;
-  margin-top: 10px;
+  position: relative;
+  margin-top: 255px;
   font-size: 15px;
   text-align: center;
   text-decoration: none;
   color: black;
+}
+
+.login-button {
+  margin-top: 180px;
+  margin-left: 50px;
 }
 
 /*# sourceMappingURL=login.css.map */
