add validError component && underButtonLink

--- a/src/views/base_styles/auth/_auth.scss
+++ b/src/views/base_styles/auth/_auth.scss
@@ -15,12 +15,12 @@
     text-align: center;
 }
 
-@mixin under-text {
-    display: block;
-    position: relative;
-    margin-top: 255px;
-    font-size: 15px;
-    text-align: center;
-    text-decoration: none;
-    color: auth_colors.$under-text-color;
-}
+// @mixin under-text {
+//     display: block;
+//     position: relative;
+//     margin-top: 150px;
+//     font-size: 15px;
+//     text-align: center;
+//     text-decoration: none;
+//     color: auth_colors.$under-text-color;
+// }
