--- a/src/views/pages/login/login.scss
+++ b/src/views/pages/login/login.scss
@@ -17,6 +17,10 @@
 }
 
 .login-button {
-    margin-top: 80px;
-    margin-left: 50px;
+    top: 400px;
+}
+
+.under-text {
+    top: 470px;
+    left: 160px;
 }
