--- a/src/views/components/button/button.scss
+++ b/src/views/components/button/button.scss
@@ -10,5 +10,6 @@ button {
     border-radius: 30px;
     font-size: 20px;
     text-align: center;
+    margin-left: 55px;
     background-color: main_colors.$component-color;
 }
