--- a/src/views/components/underButtonLink/underButtonLink.css
+++ b/src/views/components/underButtonLink/underButtonLink.css
@@ -1,7 +1,6 @@
-.under-text {
+a {
   display: block;
-  position: relative;
-  margin-top: 150px;
+  position: absolute;
   font-size: 15px;
   text-align: center;
   text-decoration: none;
