--- a/src/views/components/underButtonLink/underButtonLink.scss
+++ b/src/views/components/underButtonLink/underButtonLink.scss
@@ -1,10 +1,9 @@
 @use '../../base_styles/auth/colors/auth_colors';
 @use '../../base_styles/auth/auth';
 
-.under-text {
+a {
     display: block;
-    position: relative;
-    margin-top: 150px;
+    position: absolute;
     font-size: 15px;
     text-align: center;
     text-decoration: none;
