--- a/src/views/pages/chats/chats.scss
+++ b/src/views/pages/chats/chats.scss
@@ -1,7 +1,41 @@
 @use '../../base_styles/main/colors/main_colors';
+@use './colors/chats_colors';
+
+html, body {
+    height: 100%;
+}
 
 .chats-form {
+    height: 950px;
     width: 500px;
-    height: 1000px;
     background-color: main_colors.$back-color;
+
+    .chats-search-bar {
+        display: block;
+        position: relative;
+        top: 70px;
+        left: 100px;
+        height: 60px;
+        width: 370px;
+        border-radius: 20px;
+        border: none;
+        background-color: chats_colors.$search-bar-color;
+
+
+        &::placeholder {
+            padding-left: 20px;
+            text-align: left;
+            font-size: 20px;
+        }
+    }
+
+    .select-chat-legend {
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 1050px;
+        font-size: 25px;
+        font-weight: bold;
+        color: chats_colors.$chats-legend-color;
+    }
 }
