--- a/src/views/components/chat/chat.scss
+++ b/src/views/components/chat/chat.scss
@@ -1,41 +1,66 @@
+@use '../../base_styles/main/colors/main_colors';
 @use './colors/chat';
 
 .chat {
     display: block;
     position: relative;
+    top: 90px;
     width: 500px;
-    height: 70px;
+    height: 86px;
     border-top: 1px solid chat.$chat-border-color;
-    border-bottom: 1px solid chat.$chat-border-color;
     z-index: 2;
 
     .mock-img {
-        top: 10px;
-        left: 10px;
+        top: 15px;
+        left: 15px;
         position: relative;
-        height: 50px;
-        width: 50px;
+        height: 60px;
+        width: 60px;
         border-radius: 50%;
         background-color: chat.$chat-mock-img-color;
     }
 
     .name {
         top: -38px;
-        left: -130px;
+        left: 110px;
+        text-align: left;
         position: relative;
-        font-size: 18px;
+        font-size: 20px;
         font-weight: bold;
     }
 
     .last-part-msg {
-
+        top: -38px;
+        left: 110px;
+        text-align: left;
+        position: relative;
+        font-size: 15px;
     }
 
     .number-of-unread-msgs {
-
+        display: flex;
+        top: -67px;
+        left: 450px;
+        position: relative;
+        height: 35px;
+        width: 35px;
+        border-radius: 50%;
+        justify-content: center;
+        align-items: center;
+        font-size: 23px;
+        font-weight: bold;
+        color: chat.$chat-number-unread-msgs-color;
+        background-color: chat.$chat-mock-img-color;
     }
 
     .time-of-last-msg {
-
+        display: flex;
+        top: 13px;
+        padding-left: 4px;
+        left: 447px;
+        position: absolute;
+        font-size: 15px;
+        font-weight: bold;
+        color: chat.$chat-border-color;
     }
 }
