--- a/src/views/components/message/message.css
+++ b/src/views/components/message/message.css
@@ -1,10 +1,12 @@
 .msg-in-chat {
-  display: none;
+  display: block;
   position: absolute;
-  top: 700px;
+  top: 300px;
+  left: 500px;
   height: 20px;
   width: 70px;
   border-radius: 20px;
+  font-size: 20px;
   background-color: #d9d9d9;
 }
 
