--- a/src/views/components/message/message.scss
+++ b/src/views/components/message/message.scss
@@ -1,11 +1,13 @@
 @use './colors/msg_colors';
 
 .msg-in-chat {
-    display: none;
+    display: block;
     position: absolute;
-    top: 700px;
+    top: 300px;
+    left: 500px;
     height: 20px;
     width: 70px;
     border-radius: 20px;
+    font-size: 20px;
     background-color: msg_colors.$msg-color;
 }
