--- a/src/views/components/selectedChatArea/selectedChatArea.scss
+++ b/src/views/components/selectedChatArea/selectedChatArea.scss
@@ -57,4 +57,16 @@ header {
         border-radius: 50%;
         background-color: colors.$selected-chat-msg-button;
     }
+
+    // .msg-in-chat {
+    //     display: block;
+    //     position: absolute;
+    //     top: 300px;
+    //     left: 500px;
+    //     height: 20px;
+    //     width: 70px;
+    //     border-radius: 20px;
+    //     font-size: 20px;
+    //     background-color: msg_colors.$msg-color;
+    // }
 }
