--- a/src/views/pages/chats/chats.scss
+++ b/src/views/pages/chats/chats.scss
@@ -38,4 +38,16 @@ html, body {
         font-weight: bold;
         color: chats_colors.$chats-legend-color;
     }
+
+    // .msg-in-chat {
+    //     display: block;
+    //     position: absolute;
+    //     top: 300px;
+    //     left: 500px;
+    //     height: 20px;
+    //     width: 70px;
+    //     border-radius: 20px;
+    //     font-size: 20px;
+    //     background-color: msg_colors.$msg-color;
+    // }
 }
