--- a/src/views/components/label/label.scss
+++ b/src/views/components/label/label.scss
@@ -15,3 +15,12 @@ label {
 
     z-index: 2;
 }
+
+.profile-label {
+    top: 35px;
+    left: 40px;
+    font-size: 20px;
+    text-align: left;
+    font-weight: bold;
+    color: label_colors.$profile_label_color;
+}
