--- a/src/views/components/button/button.scss
+++ b/src/views/components/button/button.scss
@@ -1,6 +1,11 @@
 // @use '../../base_styles/main/main';
 @use '../../base_styles/main/colors/main_colors';
 
+.button-save {
+    top: 650px;
+    left: 145px;
+}
+
 button {
     display: block;
     position: absolute;
