--- a/src/views/pages/error/error.scss
+++ b/src/views/pages/error/error.scss
@@ -3,7 +3,8 @@
 
 .page-error {
     color: error_page_colors.$page-error-main-color;
-    font-family: Inter;
+
+    // font-family: Inter;
     font-style: normal;
     font-weight: 500;
     padding-bottom: 60px;
