--- a/src/views/base_styles/profile/_profile.scss
+++ b/src/views/base_styles/profile/_profile.scss
@@ -2,20 +2,23 @@
 @use '../main/colors/main_colors';
 
 @mixin profile-container {
-    @include main_base.block-center-position;
     width: 702px;
     height: 825px;
     text-align: center;
     overflow: hidden;
-    border-radius: main_base.$border_radius;
-    background-color: main_colors.$back_color;
+    border-radius: main_base.$border-radius;
+    background-color: main_colors.$back-color;
+
+    @include main_base.block-center-position;
+
 }
+
 
 @mixin avatar {
     margin-top: 50px;
     width: 150px;
     height: 150px;
     border-radius: 50%; 
-    background-color: main_colors.$component_color;
+    background-color: main_colors.$component-color;
     z-index: 1;
 }
