--- a/src/views/components/avatarLoader/colors/_colors.scss
+++ b/src/views/components/avatarLoader/colors/_colors.scss
@@ -1,3 +1,3 @@
 $avatar-loader-back: #fff;
-$dash-border: rgba(0, 0, 0, 0.67);
-$text-class: rgba(0, 0, 0, 0.39);
+$dash-border: rgb(0 0 0 / 67%);
+$text-class: rgb(0 0 0 / 39%);
