fix error with wrap elements

--- a/src/views/components/input/input.css
+++ b/src/views/components/input/input.css
@@ -1,3 +1,14 @@
+.profile-change-passwd-input {
+  top: 10px;
+  left: 330px;
+  font-size: large;
+  text-align: right;
+  border: none;
+}
+.profile-change-passwd-input:focus {
+  text-align: right;
+}
+
 input {
   display: block;
   position: relative;
