--- a/src/views/components/input/input.scss
+++ b/src/views/components/input/input.scss
@@ -1,10 +1,10 @@
 @use './colors/input_colors';
 
 
-.profile-change-passwd-input {
-   top: 10px;
+.profile-input {
+   top: 7px;
    left: 330px;
-   font-size: large;
+   font-size: 18px;
    text-align: right;
    border: none;
 
