--- a/src/views/components/input/input.scss
+++ b/src/views/components/input/input.scss
@@ -1,5 +1,13 @@
 @use './colors/input_colors';
 
+.chat-input {
+   top: 798px;
+   left: -1px;
+   height: 50px;
+   width: 1380px;
+   border: 1px solid input_colors.$input-border-color;
+}
+
 
 .profile-input {
    top: -20px;
