--- a/src/views/components/label/label.css
+++ b/src/views/components/label/label.css
@@ -18,4 +18,13 @@ label {
   color: black;
 }
 
+.chat-label {
+  top: 30px;
+  left: 30px;
+  height: 98px;
+  font-size: 20px;
+  text-align: left;
+  font-weight: bold;
+}
+
 /*# sourceMappingURL=label.css.map */
