--- a/src/views/components/label/label.scss
+++ b/src/views/components/label/label.scss
@@ -23,3 +23,12 @@ label {
     font-weight: bold;
     color: label_colors.$profile-label-color;
 }
+
+.chat-label {
+    top: 30px;
+    left: 30px;
+    height: 98px;
+    font-size: 20px;
+    text-align: left;
+    font-weight: bold;
+}
