--- a/src/views/pages/chats/chats.css
+++ b/src/views/pages/chats/chats.css
@@ -1,7 +1,3 @@
-html, body {
-  height: 100%;
-}
-
 .chats-form {
   height: 950px;
   width: 500px;
@@ -31,6 +27,16 @@ html, body {
   font-size: 25px;
   font-weight: bold;
   color: gray;
+}
+.chats-form .chat-area {
+  display: block;
+  position: absolute;
+  top: 8px;
+  left: 508px;
+  height: 151px;
+  width: 1400px;
+  border: 1px solid gray;
+  background-color: #d9d9d9;
 }
 
 /*# sourceMappingURL=chats.css.map */
